--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://kit.fontawesome.com/4c1a242022.js" crossorigin="anonymous"></script>
     <title>Github-Finder</title>
   </head>
   <body>
